# india-ai-readiness-dashboard

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  validate_scaffold.py
.streamlit/: config.toml
config/: config_loader.py  settings.yaml
dashboard/: __init__.py  app.py  data_loader.py
dashboard/pages/: 01_overview.py  02_internet.py  03_education.py  04_innovation.py  05_infrastructure.py  06_gap_analysis.py  07_recommendations.py
data/processed/: ai_readiness_index.csv  states_merged.csv
data/raw/: aicte_approved_institutes.csv  cea_electricity_statewise.csv  census_literacy_2011.csv  dpiit_startups_statewise.csv  pmgdisha_beneficiaries.csv  state_gdp_gsdp.csv  state_population_projections.csv  trai_broadband_statewise.csv  trai_internet_penetration.csv
docs/: methodology.md
src/: __init__.py  logger.py
src/analysis/: __init__.py  clustering.py  correlation.py  gap_analysis.py
src/etl/: __init__.py  cleaner.py  loader.py  merger.py
src/features/: __init__.py  index_builder.py  normalizer.py
src/visualization/: __init__.py  charts.py  maps.py
